[gd_scene load_steps=7 format=3 uid="uid://c1yib6x5v7kvx"]

[ext_resource type="Script" path="res://Stages/Desktop/Applications/FishFrying/Objects/FishToChop.gd" id="1_4rgcc"]
[ext_resource type="Texture2D" uid="uid://cteyghxcspunm" path="res://Stages/Desktop/Applications/FishFrying/Art/FishChopped.png" id="1_m6cfp"]
[ext_resource type="PackedScene" uid="uid://i8m4qob86m4j" path="res://Stages/Desktop/Applications/FishFrying/Objects/CutLine.tscn" id="3_o6gmv"]
[ext_resource type="Texture2D" uid="uid://cthqhi3tcj325" path="res://Stages/Desktop/Applications/FishFrying/Art/RemoveFish.png" id="4_r1utx"]
[ext_resource type="AudioStream" uid="uid://cmrbp4eli7ytc" path="res://Stages/Desktop/Applications/FishFrying/Audio/Chop.wav" id="5_nlnl4"]
[ext_resource type="AudioStream" uid="uid://c47idcjtnmv7n" path="res://Stages/Desktop/Applications/FishFrying/Audio/ClearBoard.wav" id="6_l7ef8"]

[node name="FishToChop" type="Node2D"]
script = ExtResource("1_4rgcc")

[node name="Tail" type="Sprite2D" parent="."]
position = Vector2(-24, 0)
texture = ExtResource("1_m6cfp")
hframes = 5
vframes = 2
frame = 5

[node name="Body3" type="Sprite2D" parent="."]
texture = ExtResource("1_m6cfp")
hframes = 5
vframes = 2
frame = 6

[node name="Body2" type="Sprite2D" parent="."]
position = Vector2(27, 0)
texture = ExtResource("1_m6cfp")
hframes = 5
vframes = 2
frame = 7

[node name="Body1" type="Sprite2D" parent="."]
position = Vector2(51, 0)
texture = ExtResource("1_m6cfp")
hframes = 5
vframes = 2
frame = 8

[node name="Head" type="Sprite2D" parent="."]
position = Vector2(67, 0)
texture = ExtResource("1_m6cfp")
hframes = 5
vframes = 2
frame = 9

[node name="Step1" type="Node2D" parent="."]

[node name="CutTail" parent="Step1" instance=ExtResource("3_o6gmv")]
offset_left = -40.0
offset_top = -32.0
offset_right = -20.0
offset_bottom = 32.0

[node name="CutHead" parent="Step1" instance=ExtResource("3_o6gmv")]
offset_left = 29.0
offset_top = -32.0
offset_right = 49.0
offset_bottom = 32.0

[node name="Step2" type="Node2D" parent="."]
visible = false

[node name="CutLeft" parent="Step2" instance=ExtResource("3_o6gmv")]
offset_left = -13.0
offset_top = -32.0
offset_right = 7.0
offset_bottom = 32.0

[node name="CutRight" parent="Step2" instance=ExtResource("3_o6gmv")]
offset_left = 11.0
offset_top = -32.0
offset_right = 31.0
offset_bottom = 32.0

[node name="Step3" type="Node2D" parent="."]
visible = false

[node name="ClearBoard" type="TextureRect" parent="Step3"]
offset_left = -110.0
offset_top = -49.0
offset_right = 130.0
offset_bottom = 51.0
texture = ExtResource("4_r1utx")

[node name="ChopSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_nlnl4")
volume_db = 1.0

[node name="ClearBoardSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_l7ef8")
volume_db = 5.0

[connection signal="gui_input" from="Step1/CutTail" to="." method="_on_cut_tail_gui_input"]
[connection signal="gui_input" from="Step1/CutHead" to="." method="_on_cut_head_gui_input"]
[connection signal="gui_input" from="Step2/CutLeft" to="." method="_on_cut_left_gui_input"]
[connection signal="gui_input" from="Step2/CutRight" to="." method="_on_cut_right_gui_input"]
[connection signal="gui_input" from="Step3/ClearBoard" to="." method="_on_clear_board_gui_input"]
